feat(all): improve ui/ux

--- a/projects/editor/src/lib/components/edit-field-dialog/edit-field-dialog.component.html
+++ b/projects/editor/src/lib/components/edit-field-dialog/edit-field-dialog.component.html
@@ -9,7 +9,7 @@
             [field]="editField"
             [property]="property"
             [isSimplified]="true"
-            (propertyChanged)="onPropertyChanged($event)">
+            (fieldChanged)="onFieldChanged()">
         </lib-edit-field>
     </section>
 
