--- a/projects/editor/src/lib/components/edit-field/edit-field.component.html
+++ b/projects/editor/src/lib/components/edit-field/edit-field.component.html
@@ -1,17 +1,19 @@
 <mat-tab-group mat-stretch-tabs>
     <mat-tab label="General">
-        <lib-property
-            [target]="field"
-            [property]="property"
-            [isSimplified]="isSimplified"
-            [isRoot]="true"
-            (valueChanged)="propertyChanged.emit($event)">
-        </lib-property>
+        <div class="tree-container">
+            <lib-property
+                [target]="field"
+                [property]="property"
+                [isSimplified]="isSimplified"
+                [isRoot]="true"
+                (targetChanged)="fieldChanged.emit()">
+            </lib-property>
+        </div>
     </mat-tab>
     <mat-tab label="Styling">
         <lib-edit-field-styles
             [editField]="field"
-            (valueChanged)="propertyChanged.emit($event)">
+            (fieldChanged)="fieldChanged.emit()">
         </lib-edit-field-styles>
     </mat-tab>
 </mat-tab-group>
