--- a/projects/editor/src/lib/components/field-tree-item/field-tree-item.component.html
+++ b/projects/editor/src/lib/components/field-tree-item/field-tree-item.component.html
@@ -1,59 +1,15 @@
-<div class="tree-item-header" [class.active]="isActiveField" (click)="onHeaderClicked($event)">
-	<span class="tree-item-header-content-left">
-		<button mat-icon-button [ngStyle]="{'margin-right.px': treeLevelPadding}" [matMenuTriggerFor]="optionsMenu" (click)="$event.stopPropagation()">
-			<mat-icon>more_vert</mat-icon>
-		</button>
-		
-		<mat-menu #optionsMenu="matMenu">
-			<button *ngIf="field.canHaveChildren" mat-menu-item [matMenuTriggerFor]="addCategoryMenu">
-				<mat-icon>add</mat-icon>
-				<span>Add</span>
-			</button>
-			<button *ngIf="field.canHaveChildren && replaceCategories.length > 0" mat-menu-item [matMenuTriggerFor]="replaceCategoryMenu">
-				<mat-icon>sync</mat-icon>
-				<span>Replace</span>
-			</button>
-			<button *ngIf="treeLevel !== 0" mat-menu-item (click)="remove.emit()">
-				<mat-icon>remove</mat-icon>
-				<span>Remove</span>
-			</button>
-		</mat-menu>
-	
-		<mat-menu #addCategoryMenu="matMenu">
-            <ng-container *ngFor="let category of editorService.fieldCategories">
-                <button mat-menu-item [matMenuTriggerFor]="addFieldMenu">
-                    {{ category.name }}
-                </button>
-
-                <mat-menu #addFieldMenu="matMenu">
-                    <button mat-menu-item  *ngFor="let option of category.typeOptions" (click)="onAddChildField(option.name, option.customName)">
-                        {{ option.displayName }}
-                    </button>
-                </mat-menu>
-            </ng-container>
-		</mat-menu>
-		
-		<mat-menu #replaceCategoryMenu="matMenu">
-            <ng-container *ngFor="let category of replaceCategories">
-                <button mat-menu-item [matMenuTriggerFor]="replaceFieldMenu">
-                    {{ category.name }}
-                </button>
-
-                <mat-menu #replaceFieldMenu="matMenu">
-                    <button mat-menu-item  *ngFor="let option of category.typeOptions" (click)="onReplaceParentField(option.name, option.customName)">
-                        {{ option.displayName }}
-                    </button>
-                </mat-menu>
-            </ng-container>
-		</mat-menu>
-	
-		<!-- use a disabled button to provide padding for non expandable fields -->
-		<button mat-icon-button [disabled]="!field.canHaveChildren" (click)="onToggle($event)">
-			<mat-icon class="expand-icon" [class.expanded-90]="isExpanded" *ngIf="field.canHaveChildren">chevron_right</mat-icon>
-		</button>
-		<span>{{ editorService.getFormattedFieldName(field.name, field.key) }}</span>
-	</span>
-</div>
+<lib-tree-item-header 
+    class="cursor-pointer"
+    [treeLevel]="treeLevel"
+    [(isExpanded)]="isExpanded"
+    [isExpandable]="field.canHaveChildren"
+    [isActive]="isActiveField"
+    [hasOptions]="hasOptions"
+    [optionsMenu]="optionsMenu"
+    (isExpandedChange)="onSelected()"
+    >
+    <span>{{ editorService.getFormattedFieldName(field.name, field.key) }}</span>
+</lib-tree-item-header>
 
 <div [ngStyle]="{ display: (childFields && isExpanded) ? 'block' : 'none' }">
     <lib-field-tree-item *ngFor="let child of childFields; trackBy: trackFieldById" [field]="child"
@@ -62,3 +18,46 @@
                             (expandParent)="onExpandParent()">
     </lib-field-tree-item>
 </div>
+	
+<mat-menu #optionsMenu="matMenu">
+    <button *ngIf="field.canHaveChildren" mat-menu-item [matMenuTriggerFor]="addCategoryMenu">
+        <mat-icon>add</mat-icon>
+        <span>Add</span>
+    </button>
+    <button *ngIf="field.canHaveChildren && replaceCategories.length > 0" mat-menu-item [matMenuTriggerFor]="replaceCategoryMenu">
+        <mat-icon>sync</mat-icon>
+        <span>Replace</span>
+    </button>
+    <button *ngIf="treeLevel !== 0" mat-menu-item (click)="remove.emit()">
+        <mat-icon>remove</mat-icon>
+        <span>Remove</span>
+    </button>
+</mat-menu>
+	
+<mat-menu #addCategoryMenu="matMenu">
+    <ng-container *ngFor="let category of editorService.fieldCategories">
+        <button mat-menu-item [matMenuTriggerFor]="addFieldMenu">
+            {{ category.name }}
+        </button>
+
+        <mat-menu #addFieldMenu="matMenu">
+            <button mat-menu-item  *ngFor="let option of category.typeOptions" (click)="onAddChildField(option.name, option.customName)">
+                {{ option.displayName }}
+            </button>
+        </mat-menu>
+    </ng-container>
+</mat-menu>
+
+<mat-menu #replaceCategoryMenu="matMenu">
+    <ng-container *ngFor="let category of replaceCategories">
+        <button mat-menu-item [matMenuTriggerFor]="replaceFieldMenu">
+            {{ category.name }}
+        </button>
+
+        <mat-menu #replaceFieldMenu="matMenu">
+            <button mat-menu-item  *ngFor="let option of category.typeOptions" (click)="onReplaceParentField(option.name, option.customName)">
+                {{ option.displayName }}
+            </button>
+        </mat-menu>
+    </ng-container>
+</mat-menu>
