--- a/projects/editor/src/lib/components/form/form.component.scss
+++ b/projects/editor/src/lib/components/form/form.component.scss
@@ -31,6 +31,12 @@
     height: var(--header-height);
 }
 
+.categories-wrapper {
+    min-width: max-content;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
 lib-sidebar-section .header-content {
     flex-grow: 1;
     display: flex;
