--- a/projects/editor/src/lib/components/property/chip-list-property/chip-list-property.component.html
+++ b/projects/editor/src/lib/components/property/chip-list-property/chip-list-property.component.html
@@ -1,26 +1,22 @@
-<div class="tree-item-header" *ngIf="!isSimplified else simplifiedView">
-	<span class="tree-item-header-content-left">
-		<button mat-icon-button [matMenuTriggerFor]="optionsMenu" [disabled]="!hasOptions">
-			<mat-icon>more_vert</mat-icon>
-		</button>
-			
-		<mat-menu #optionsMenu="matMenu">
-			<button *ngIf="property.isDeletable" mat-menu-item color="warn" (click)="remove.emit()">
-				<mat-icon>remove</mat-icon>
-				<span>Remove</span>
-			</button>
-		</mat-menu>
-	
-		<!-- use a disabled button to provide padding for non expandable field -->
-		<button [style.margin-left.px]="treeLevelPadding" mat-icon-button [disabled]="true"></button>
-		<span #key class="keyField" [ngClass]="{ 'editable': !!property.isKeyEditable }" [contentEditable]="!!property.isKeyEditable"></span>
-		<span>:</span>
-	</span>
-	
-	<div class="tree-item-header-content-right">
+<lib-tree-item-header 
+    class="cursor-pointer"
+    *ngIf="!isSimplified else simplifiedView"
+    [treeLevel]="treeLevel"
+    [hasOptions]="hasOptions"
+    [optionsMenu]="optionsMenu"
+    >
+    <span class="property-key">
+        <span #key 
+            class="keyField" 
+            [ngClass]="{ 'editable': !!property.isKeyEditable }"
+            [contentEditable]="!!property.isKeyEditable">
+        </span>
+        <span>:</span>
+    </span>
+    <span class="property-field">
         <ng-container [ngTemplateOutlet]="formField" [ngTemplateOutletContext]="{ appearance: 'outline' }"></ng-container>
-	</div>
-</div>
+    </span>
+</lib-tree-item-header>
 
 <ng-template #simplifiedView>
     <ng-container [ngTemplateOutlet]="formField" [ngTemplateOutletContext]="{ showLabel: true }"></ng-container>
@@ -54,3 +50,10 @@
         </mat-autocomplete>
     </mat-form-field>
 </ng-template>
+
+<mat-menu #optionsMenu="matMenu">
+    <button *ngIf="property.isRemovable" mat-menu-item color="warn" (click)="remove.emit()">
+        <mat-icon>remove</mat-icon>
+        <span>Remove</span>
+    </button>
+</mat-menu>
