--- a/projects/editor/src/lib/components/property/property.component.html
+++ b/projects/editor/src/lib/components/property/property.component.html
@@ -2,62 +2,57 @@
     <lib-array-property 
         *ngSwitchCase="propertyType.ARRAY"
         [treeLevel]="treeLevel"
-        [path]="path"
         [target]="isRoot ? target : target[property.key]"
         [property]="propertyService.getAsArrayProperty(property)"
         [isSimplified]="isSimplified"
-        (keyChanged)="onKeyChanged($event, property)"
         (remove)="remove.emit()"
-        (valueChanged)="valueChanged.emit($event)">
+        (keyChanged)="onKeyChanged($event)"
+        (targetChanged)="targetChanged.emit()">
     </lib-array-property>
 
     <lib-object-property
         *ngSwitchCase="propertyType.OBJECT"
         [treeLevel]="treeLevel"
-        [path]="path"
         [target]="isRoot ? target : target[property.key]"
         [property]="propertyService.getAsObjectProperty(property)"
         [isSimplified]="isSimplified"
         [isExpanded]="isRoot"
-        (keyChanged)="onKeyChanged($event, property)"
         (remove)="remove.emit()"
-        (valueChanged)="valueChanged.emit($event)">
+        (keyChanged)="onKeyChanged($event)"
+        (targetChanged)="targetChanged.emit()">
     </lib-object-property>
 
     <lib-boolean-property
         *ngSwitchCase="propertyType.BOOLEAN"
         [treeLevel]="treeLevel"
-        [path]="path"
         [property]="property"
         [target]="target"
         [isSimplified]="isSimplified"
-        (keyChanged)="onKeyChanged($event, property)"
         (remove)="remove.emit()"
-        (valueChanged)="valueChanged.emit($event)">
+        (keyChanged)="onKeyChanged($event)"
+        (targetChanged)="targetChanged.emit()">
     </lib-boolean-property>
 
     <lib-chip-list-property
         *ngSwitchCase="propertyType.CHIP_LIST"
         [treeLevel]="treeLevel"
-        [path]="path"
         [property]="propertyService.getAsChiplistProperty(property)"
         [target]="target"
         [isSimplified]="isSimplified"
-        (keyChanged)="onKeyChanged($event, property)"
         (remove)="remove.emit()"
-        (valueChanged)="valueChanged.emit($event)">
+        (keyChanged)="onKeyChanged($event)"
+        (targetChanged)="targetChanged.emit()">
     </lib-chip-list-property>
 
     <lib-textarea-property
         *ngSwitchCase="propertyType.TEXTAREA"
         [treeLevel]="treeLevel"
-        [path]="path"
         [property]="propertyService.getAsTextareaProperty(property)"
         [target]="target"
         [isSimplified]="isSimplified"
-        (keyChanged)="onKeyChanged($event, property)"
         (remove)="remove.emit()"
-        (valueChanged)="valueChanged.emit($event)">
+        (keyChanged)="onKeyChanged($event)"
+        (targetChanged)="targetChanged.emit()">
     </lib-textarea-property>
 
     <ng-container *ngSwitchCase="propertyType.NUMBER">
@@ -69,13 +64,12 @@
     <ng-template #inputProperty>
         <lib-input-property
             [treeLevel]="treeLevel"
-            [path]="path"
             [property]="propertyService.getAsInputProperty(property)"
             [target]="target"
             [isSimplified]="isSimplified"
-            (keyChanged)="onKeyChanged($event, property)"
             (remove)="remove.emit()"
-            (valueChanged)="valueChanged.emit($event)">
+            (keyChanged)="onKeyChanged($event)"
+            (targetChanged)="targetChanged.emit()">
         </lib-input-property>
     </ng-template>
 </ng-container>
