--- a/projects/editor/src/lib/components/tree-item-header/tree-item-header.component.scss
+++ b/projects/editor/src/lib/components/tree-item-header/tree-item-header.component.scss
@@ -27,7 +27,7 @@
 
 .tree-item-header-options.sticky {
     position: sticky;
-    right: 0;
+    right: 4px;
     background-color: white;
     border-radius: 50%;
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12);
@@ -35,7 +35,6 @@
 
 .tree-item-side-line {
     position: absolute;
-    // height: 16px;
     height: 100%;
     border-left: 1px solid rgba(0,0,0,0.12);
 }
