--- a/projects/editor/src/lib/components/edit-field/edit-field.component.scss
+++ b/projects/editor/src/lib/components/edit-field/edit-field.component.scss
@@ -1,3 +1,9 @@
 mat-tab-group {
     height: 100%;
 }
+
+.styling-wrapper {
+    min-width: max-content;
+    padding: 8px;
+    box-sizing: border-box;
+}
