--- a/projects/editor/src/lib/components/edit-field/edit-field.component.html
+++ b/projects/editor/src/lib/components/edit-field/edit-field.component.html
@@ -11,9 +11,11 @@
         </div>
     </mat-tab>
     <mat-tab label="Styling">
-        <lib-edit-field-styles
-            [editField]="field"
-            (fieldChanged)="fieldChanged.emit()">
-        </lib-edit-field-styles>
+        <div class="styling-wrapper">
+            <lib-edit-field-styles
+                [editField]="field"
+                (fieldChanged)="fieldChanged.emit()">
+            </lib-edit-field-styles>
+        </div>
     </mat-tab>
 </mat-tab-group>
