--- a/src/styles.scss
+++ b/src/styles.scss
@@ -134,6 +134,10 @@ button.mat-icon-button {
     opacity: 0.6 !important;
 }
 
+.hidden {
+    display: none !important;
+}
+
 lib-sidebar .resizing {
     transition: none !important;
 }
