--- a/projects/editor/src/lib/components/property/object-property/object-property.component.html
+++ b/projects/editor/src/lib/components/property/object-property/object-property.component.html
@@ -40,15 +40,76 @@
 
 <ng-template #childPropertiesView>
 	<ng-container *ngFor="let child of property.childProperties; let i = index; trackBy: trackPropertyByKey">
-        <lib-property
-            *ngIf="isSimplified ? child.isSimple : true"
-            [treeLevel]="treeLevel + 1"
-            [target]="target"
-            [property]="child"
-            [isSimplified]="isSimplified"
-            (remove)="onRemoveChild(i)"
-            (targetChanged)="targetChanged.emit()">
-        </lib-property>
+        <ng-container *ngIf="isSimplified ? child.isSimple : true">
+            <ng-container [ngSwitch]="child.type">
+                <lib-array-property 
+                    *ngSwitchCase="propertyType.ARRAY"
+                    [treeLevel]="treeLevel + 1"
+                    [target]="childrenTarget"
+                    [property]="propertyService.getAsArrayProperty(child)"
+                    [isSimplified]="isSimplified"
+                    (remove)="onRemoveChild(i)"
+                    (targetChanged)="targetChanged.emit()">
+                </lib-array-property>
+            
+                <lib-object-property
+                    *ngSwitchCase="propertyType.OBJECT"
+                    [treeLevel]="treeLevel + 1"
+                    [target]="childrenTarget"
+                    [property]="propertyService.getAsObjectProperty(child)"
+                    [isSimplified]="isSimplified"
+                    (remove)="onRemoveChild(i)"
+                    (targetChanged)="targetChanged.emit()">
+                </lib-object-property>
+            
+                <lib-boolean-property
+                    *ngSwitchCase="propertyType.BOOLEAN"
+                    [treeLevel]="treeLevel + 1"
+                    [property]="property"
+                    [target]="childrenTarget"
+                    [isSimplified]="isSimplified"
+                    (remove)="onRemoveChild(i)"
+                    (targetChanged)="targetChanged.emit()">
+                </lib-boolean-property>
+            
+                <lib-chip-list-property
+                    *ngSwitchCase="propertyType.CHIP_LIST"
+                    [treeLevel]="treeLevel + 1"
+                    [property]="propertyService.getAsChiplistProperty(child)"
+                    [target]="childrenTarget"
+                    [isSimplified]="isSimplified"
+                    (remove)="onRemoveChild(i)"
+                    (targetChanged)="targetChanged.emit()">
+                </lib-chip-list-property>
+            
+                <lib-textarea-property
+                    *ngSwitchCase="propertyType.TEXTAREA"
+                    [treeLevel]="treeLevel + 1"
+                    [property]="propertyService.getAsTextareaProperty(child)"
+                    [target]="childrenTarget"
+                    [isSimplified]="isSimplified"
+                    (remove)="onRemoveChild(i)"
+                    (targetChanged)="targetChanged.emit()">
+                </lib-textarea-property>
+            
+                <ng-container *ngSwitchCase="propertyType.NUMBER">
+                    <ng-container *ngTemplateOutlet="inputProperty"></ng-container>
+                </ng-container>
+                <ng-container *ngSwitchCase="propertyType.TEXT">
+                    <ng-container *ngTemplateOutlet="inputProperty"></ng-container>
+                </ng-container>
+                <ng-template #inputProperty>
+                    <lib-input-property
+                        [treeLevel]="treeLevel + 1"
+                        [property]="propertyService.getAsInputProperty(child)"
+                        [target]="childrenTarget"
+                        [isSimplified]="isSimplified"
+                        (remove)="onRemoveChild(i)"
+                        (targetChanged)="targetChanged.emit()">
+                    </lib-input-property>
+                </ng-template>
+            </ng-container>
+        </ng-container>
 	</ng-container>
 </ng-template>
 
