--- a/projects/editor/src/lib/components/formly/editor-formly-group/editor-formly-group.component.html
+++ b/projects/editor/src/lib/components/formly/editor-formly-group/editor-formly-group.component.html
@@ -7,11 +7,11 @@
     [cdkDropListConnectedTo]="connectedTo"
     [cdkDropListData]="field"
     (cdkDropListDropped)="onDroplistDropped($event)">
-    <formly-field
+    <lib-editor-formly-field
         *ngFor="let f of field.fieldGroup" 
         [field]="f" 
         cdkDrag
         [cdkDragData]="getItemDragData(f)">
         <div *cdkDragPlaceholder>Drop Here</div>
-    </formly-field>
+    </lib-editor-formly-field>
 </div>
